# movest

./: .gitignore  .gitmodules  README.md  ffmpeg.diff
docs/: classifier-losses.txt  classifier-losses.txt~  consentform.tex  phase1report.txt  progresspresentation.odp  progressreport.tex
docs/dissertation/: el398_dissertation.tex  proposal.tex  refs.bib
docs/dissertation/img/: 4xembed.eps  capacities.eps  chisq-attack.eps  chisq-attack.old.eps  chisq-attack.tex  f3-hist.eps  f3-hist2.eps  histogram-example.eps  movest-alg-class-diag.tex  movest-c-api.tex  movest-f4-mapping.tex  movest-reversion-sketch.tex  msteg-hist.tex  msteg-visual.eps  post-lsb-embedding.eps  pre-lsb-embedding.eps  unencrypted-enc.eps  unencrypted-enc2.eps
docs/proposal/: proposal.lyx
movest-analysis/: aggregateIntoBytes.m  chiSquareAttack.m  computeSadFreqs.m  decodeHideSeek.m  load_mvs.m  loadmvs.m  lsbplane.m  mvhist.m  patternSearch.m  plot2d.m  seqbytes.m  svmtraining.m  transcodeanalysis.m  typedMvs.m
movest-analysis/known-attacks/f3/: histogrambarsheight.m
movest-analysis/known-attacks/hidenseek/: chisqattack.m  visualattack.m
movest-analysis/known-attacks/msteg/: histogrampairsattack.m
movest-analysis/known-attacks/no-encryption/: visualattacknoenc.m
movest-analysis/known-attacks/transcoding/: classifiers.mat  computeSadFreqs.m  f3svmtraining.m  f4svmtraining.m  hidenseeksvmtraining.m  mstegsvmtraining.m  mvstegsvmtraining.m  xualgsvmtraining.m
movest-app/: CMakeLists.txt  main.cpp
movest-app/libs/rscode/: Makefile
movest-app/src/: algorithm.cpp  decoder.c  decoder.cpp  decoder.h  encoder.c  encoder.cpp  encoder.h  main.cpp  movest_connector.h
movest-app/src/movestlib/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  algorithm.cpp  algorithm.h  movest_connector.cpp  movest_connector.h
movest-app/src/movestlib/algo/: Dummy.cpp  Dummy.h  DumpMVs.cpp  DumpMVs.h  DumpMvs.cpp  DumpMvs.h  F3.cpp  F3.h  F4.cpp  F4.h  HideSeek.cpp  HideSeek.h  MSteg.cpp  MSteg.h  MVSteg.cpp  MVSteg.h  MVStegVuln.cpp  MVStegVuln.h  OutGuess1.cpp  OutGuess1.h  RandomisedHideSeek.cpp  RandomisedHideSeek.h  XuAlg.cpp  XuAlg.h
movest-app/src/movestlib/crypto/: Buffer.h  CryptoFile.cpp  CryptoFile.h
movest-app/src/movestlib/test/: test_capi.cpp  test_cryptofile.cpp  test_modification.cpp
